# Fresh

./: CMakeAppSettings.txt  CMakeBaseSettings.txt  CMakeLists.txt  LICENSE.txt  README-Linux.txt  README-Mac.txt  README-Win.txt  install-linux-devtools.sh  new_project.rb
Fresh Docs/: A Note on Display Tree Fixup and Notification.docx  A Note on Objects, Classes, and Prototypes.docx  Adding Lua to Fresh.md  Android Porting Notes.md  Discoveries from shared_ptr.txt  Fresh 2 Tasks.numbers  Fresh Animation.md  Fresh Asset Processor.docx  Fresh Assets.docx  Fresh Audio System Design.docx  Fresh Classes.docx  Fresh Core Class Dependencies.docx  Fresh Editor Design.docx  Fresh Engine Refreshment 2012-09.txt  Fresh Object Namespaces.docx  Fresh Object System Refactor Notes.docx  Fresh Object and Asset Post-Loading Notes.docx  Fresh Performance - Package findGeneric.md  Fresh Physics - Collapsing, Annexing, and Keeping  Fresh Physics Design.md  Fresh Play Statistics.docx  Fresh Pseudoclasses.docx  Fresh Telemetry - Scheduling Moratoria.md  Fresh Texture Atlases Notes.docx  FreshCore.docx  FreshLua - Command line.md  FreshLua - Run modes.md  FreshLua Command Line.md  Massive Refactor Questions.docx  Notes on Fresh Object Naming.docx  Overriding classes with new default propert  Premultiplied Alpha Blending.nb  Renderer Refactor Notes 2011-11-26.txt  The Heart of Darkness 2013-02-28.docx
FreshCore/: Angle.h  Archive.cpp  Archive.h  Asset.cpp  Asset.h  Assets.cpp  Assets.h  ChangeHistory.h  ClassFilter.cpp  ClassFilter.h  ClassInfo.cpp  ClassInfo.h  Classes.cpp  Classes.h  CommandProcessor.cpp  CommandProcessor.h  Constants.cpp  Constants.h  CoreCommands.cpp  CoreCommands.h  CoreCppCompatability.h  Dispatch.cpp  Dispatch.h  FindPath.h  FindPath_Simple.h  FreshCloth.h  FreshDebug.cpp  FreshDebug.h  FreshEssentials.cpp  FreshEssentials.h  FreshException.cpp  FreshException.h  FreshFile.cpp  FreshFile.h  FreshManifest.cpp  FreshManifest.h  FreshManifestXml.cpp  FreshMath.h  FreshOptional.h  FreshPath.h  (+81 more)
FreshCore/tests/: TestObjectCreation.cpp  TestSerialization.cpp  freshObjects.xml
FreshEditor/: EdBoxSelector.cpp  EdBoxSelector.h  EdClassInventory.cpp  EdClassInventory.h  EdGizmoButton.cpp  EdGizmoButton.h  EdGroup.cpp  EdGroup.h  EdManipulator.cpp  EdManipulator.h  EdObjectBrowser.cpp  EdObjectBrowser.h  EdPointList.cpp  EdPointList.h  EdSelectionHarness.cpp  EdSelectionHarness.h  EdTimeline.cpp  EdTimeline.h  EdTimelineAncestorDisplay.cpp  EdTimelineAncestorDisplay.h  EdTimelineSubjectDisplay.cpp  EdTimelineSubjectDisplay.h  Editor.cpp  Editor.h  PropertyPane.cpp  PropertyPane.h
FreshGame/: FreshActor.cpp  FreshActor.h  FreshActorController.cpp  FreshActorController.h  FreshPlayerController.cpp  FreshPlayerController.h  FreshTileGrid.cpp  FreshTileGrid.h  FreshWorld.cpp  FreshWorld.h  HighScoreTable.cpp  HighScoreTable.h  Lighting.cpp  Lighting.h  ScreenEffects.cpp  ScreenEffects.h  Segment.cpp  Segment.h  TypewriterText.cpp  TypewriterText.h  VersionNumberDisplay.cpp  VersionNumberDisplay.h
FreshGame/assets/: freshgame_assets.xml
FreshPlatform/: Application.cpp  Application.h  AudioCue.cpp  AudioCue.h  AudioSession.h  AudioSound.cpp  AudioSound.h  AudioSystem.cpp  AudioSystem.h  AudioSystemImpl.h  Color.cpp  Color.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.cpp  EventKeyboard.h  EventTouch.cpp  EventTouch.h  Font.cpp  Font.h  FreshAnalytics.h  FreshGameCenter.h  FreshGraphicsUtil.cpp  FreshGraphicsUtil.h  FreshLicensing.cpp  FreshLicensing.h  FreshOpenAL.h  FreshOpenGL.cpp  FreshOpenGL.h  FreshSocial.h  FreshVersioning.cpp  FreshVersioning.h  Gamepad.cpp  Gamepad.h  GamepadTester.cpp  GamepadTester.h  ImageLoader.h  Keyboard.cpp  Keyboard.h  (+28 more)
FreshScene2D/: ApplicationStaged.cpp  ApplicationStaged.h  ButtonLabeled.cpp  ButtonLabeled.h  Camera.cpp  Camera.h  DevStatsDisplay.cpp  DevStatsDisplay.h  DisplayFilter.cpp  DisplayFilter.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectComponent.cpp  DisplayObjectComponent.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  DisplayObjectSpawner.cpp  DisplayObjectSpawner.h  DisplayObjectState.cpp  DisplayObjectState.h  DisplayObjectWithMesh.cpp  DisplayObjectWithMesh.h  DisplayPackage.cpp  DisplayPackage.h  FilterBlur.cpp  FilterBlur.h  FilterBlur1D.cpp  FilterBlur1D.h  Graphics.cpp  Graphics.h  Keyframe.cpp  Keyframe.h  MovieClip.cpp  MovieClip.h  ParticleEmitter.cpp  ParticleEmitter.h  PostEffect.cpp  PostEffect.h  SimpleButton.cpp  SimpleButton.h  (+32 more)
FreshScene2D/assets/: freshscene2d_assets.xml
FreshScript/: ApiAudio.cpp  ApiAudio.injected.h  ApiImplementation.h  ApiInput.cpp  ApiInput.injected.h  ApiMap.cpp  ApiMap.injected.h  ApiMath.cpp  ApiMath.injected.h  ApiNav.cpp  ApiNav.injected.h  ApiRendering.cpp  ApiRendering.injected.h  ApiScreen.cpp  ApiScreen.injected.h  ApiTable.cpp  ApiTable.injected.h  FantasyConsole.cpp  FantasyConsole.h  FantasyConsole.inl.h  FantasyConsoleScreen.cpp  FantasyConsoleScreen.h  LuaCppInterop.hpp  ValueControls.cpp  ValueControls.h  VirtualTrackball.cpp  VirtualTrackball.h
FreshTelemetry/: UserTelemetry.cpp  UserTelemetry.h
FreshTelemetry/server_scripts/: endSession.php  enterContext.php  install.php  leaveContext.php  moratorium_template.php  query.php  registerEvent.php  startSession.php
ProjectTemplate/: .gitignore  CMakeLists.txt
ProjectTemplate/assets/: .gitignore  asset-classes.fresh  asset-database.fresh  assets.fresh  classes.fresh  config-Android.fresh  config-Mac.fresh  config-Unix.fresh  config-Web.fresh  config-Win.fresh  config-iOS.fresh  (+6 more)
lib/: gif.h
tools/: FindALUT.cmake  color_fix.rb  expand_font_image.jsx  flatten_font_image.jsx  indent_string.rb  mingw_toolchain.cmake  tp2mc.rb  upver.rb  xml2json.rb  xmlToFresh.rb
tools/FreshAssetConverter/: AssetTransform.cpp  AssetTransform.h  AssetTransformAudio.cpp  AssetTransformAudio.h  AssetTransformTexture.cpp  AssetTransformTexture.h  CMakeLists.txt  fac-ps.jsx  main.cpp  ps-open.scpt
tools/FreshAssetConverter/MacOSX/fac/: fac.1
tools/FreshAssetConverter/MacOSX/fac.xcodeproj/: project.pbxproj
(+91 files in other folders)
